--- a/MeusTemas/static/css/my_jassor.css
+++ b/MeusTemas/static/css/my_jassor.css
@@ -24,6 +24,15 @@
 	margin-bottom:5%;
 }
 
+.notificacao {
+    text-align: center;
+}
+
+.notificacao img{
+    width: 350px;
+    margin: 0 auto;
+}
+
 
 
 
