--- a/MeusTemas/La_No_Parque/static/less/style.less
+++ b/MeusTemas/La_No_Parque/static/less/style.less
@@ -40,16 +40,14 @@ body{
             .inline-content(6%);   
             text-align: center;
             padding:5px 3px;
-            height: 35px;
             
-            font-size: 1.0em;
+            font-size: 1.1em;
             font-weight: 600;
             color: @white-2;
         }
         
         a:hover{
             color: @green-2;
-            font-weight: 700;
         }
         
     }
@@ -812,44 +810,19 @@ body{
            margin-bottom: 2%;
            
            .img-container{
-                .float-config(left,59%);
+                .float-config(left,49%);
                 display: table;
+                padding: 1%;
                 position: relative;
-
-               .img-content,product-photos{
+               
+               .img-content{
                    width: 100%;
+                   padding: 0;
                    
                    .current-photo{
-                       @altura_slide: 400px;
-                       
-                       width: 100%;                       
-                       height: @altura_slide;
-                       
-                          .current-photo-container{
-                              height: @altura_slide;
-                              
-                              .cloud-zoom-wrap{
-                                  height: @altura_slide;
-                                  
-                                  a.cloud-zoom{
-                                      height: @altura_slide;
-                                      
-                                      img{
-                                          max-height: @altura_slide;
-                                          background-color: @white-10;
-                                      }
-                                      .cloud-zoom-lens{
-                                          background-color: @white-10;
-                                      }
-                                  }
-                                  .mousetrap{
-                                  }
-                                  .cloud-zoom-big{
-                                        background-color: @white-10;
-                                   }
-                              }
-                          }
-                      }
+                       width: 270px; 
+                       height: 300px;
+                   }
                }
                
                .img-thumbs:extend(.full-container){
@@ -868,8 +841,9 @@ body{
            
            .conteudo{
                
-               .float-config(right,40%);
+               .float-config(right,48%);
                padding: 2%;
+               margin-top: 1%;
                margin-right: 1%;
                margin-bottom: 2%;
                font-size: 1.1em;
@@ -880,6 +854,7 @@ body{
                
                .description{
                     overflow: hidden;
+                   .test-1;
                }
                
                p.valor{
@@ -1064,6 +1039,59 @@ body{
                     padding: 1%;
                     height: 100px;
 
+                    /*td.quantidade
+                    {
+                        width: 90px;
+                        display: table;
+                        //.test-1;
+                        
+                        input{
+                            text-align: center;
+                            width: 80%;
+                            float: left;
+                            height:40px; 
+                            //.test-2;
+                        }
+                        
+                        .ls-buttons{
+                            float: right;
+                            width: 15%;
+                            height: 30px;
+                            padding: 0;
+                            margin: 0;
+                            //.test-3;
+                            
+                            button.add-cart{
+                                width: 100%;
+                                height: 16px;
+                                margin:-5% 0 0 0;
+                                padding: 0;
+                                background-image: url(../img/add_cart.png);
+                                background-size: 85%;
+                                background-position:5px -1;
+                                background-repeat: no-repeat;
+                                background-color: transparent;
+                                border: none;
+                                //.test-4;
+                            }
+                            
+                            button.remove-cart{
+                                width: 100%;
+                                height: 18px;
+                                margin:-5px 0 0 0;
+                                padding: 0;
+                                background-image: url(../img/remove_cart.png);
+                                background-size: 85%;
+                                background-position:2px -5px;
+                                background-repeat: no-repeat;
+                                background-color: transparent;
+                                border: none;    
+                                //.test-4;
+                            }
+                        
+                        }
+                        
+                    }*/
                     td.quantidade{
                         width: 100px;
                         display: table;
