--- a/MeusTemas/Balancas_Bonetti/HTML/less/style.less
+++ b/MeusTemas/Balancas_Bonetti/HTML/less/style.less
@@ -667,10 +667,12 @@ section.produtos:extend(.myContainer_content){
                     font-size: 1.4em;
                     font-weight: 600;
                     margin:3px 0;
+                    height: 50px;
                 }
                 
                 p.valor{
                     font-size: 1.25em;
+                    height: 25px;
                 }
                 
                 a.btn-detalhes{
