--- a/MeusTemas/La_No_Parque/static/less/style.less
+++ b/MeusTemas/La_No_Parque/static/less/style.less
@@ -101,48 +101,28 @@ body{
           text-align:center;
         }
 
-        //SOCIAIS
-        .sociais{
-            .float-config(left,35%);
-            text-align: center;
-            
-            .social{   
-                .inline-content(3%);
-
-                a{
-                    .lateral-margin(38%);
-                    display: table;
-
-                    img.link{display: block;}
-                    img.hover{display: none;}
-                }
-                a:hover{            
-                    img.link{display: none;}
-                    img.hover{display: block;}
-                }
-
-                img{max-width: 30px;} 
-            }
-        }
-
         //USUARIO
         .usuario{
             .float-config(right,35%);
             text-align: center;
 
             a{  
-                .float-config(right,auto);
+                .float-config(right,auto);                
                 margin-left: 10px;
-                padding: 1.5%;
                 color: @white-10;
-
+                height: 60px;
+                                    
                 @media (min-width:800px)   {
-                    height: 30px;
-                    padding-top:5px;
+                    width: 90px;
+                    padding-top:20px;
+                    font-size: 0.9em;
                 }
-                @media (min-width:1024px)   {
-                    height: 50px;
-                    padding-top:13px;
+                @media (min-width:1800px)   {
+                    width: 120px; 
+                    padding: 1.5%;
+                    padding-top:18px;
+                    font-size: 1.1em;
+                    font-weight: 500;
                 }
 
                 border:solid 1px;
@@ -183,16 +163,17 @@ body{
             
             //CARRINHO
             a.carrinho{
-                .float-config(right,22.5%);
+                .float-config(right,auto);
+                width: 90px;
                 font-weight: 600;
                 font-size: 1.3em;
                 padding: 2px 0 0 4px;
 
                 background-color: #104F5E;
                 background-image: url("../img/carrinho.png");
-                background-size: 80%;
+                background-size: 75%;
                 background-repeat: no-repeat;
-                background-position: 5px 5px;
+                background-position: 8px 3px;
             }
             a.carrinho:hover{   
                 border:solid 1px #104F5E;
@@ -600,6 +581,11 @@ body{
     /*QUEM SOMOS*/
     section.quem-somos{
      margin:0 0 5% 0;
+        
+        img{
+            .lateral-margin(90%);
+            max-height: 450px;
+        }
      
          p{
             .lateral-margin(90%);
@@ -854,7 +840,6 @@ body{
                
                .description{
                     overflow: hidden;
-                   .test-1;
                }
                
                p.valor{
@@ -1228,6 +1213,40 @@ body{
                         margin:5px 2% 5px 0;
                     }
               }
+              
+              //SOCIAIS
+              .sociais:extend(.full-container){
+                    text-align: center;
+
+                    .social{   
+                        .inline-content(3%);
+                        display: block;
+                        
+                        a{
+                            width: 100%;
+                            text-align: center;
+                            
+                            img{
+                                max-width: 30px;
+                                margin:0 0 5px 20px;
+                            } 
+                            
+                            img.link{display: block;}
+                            img.hover{display: none;}
+                        }
+                        a:hover{            
+                            img.link{display: none;}
+                            img.hover{display: block;}
+                        }
+
+                        p{
+                            width: 100%;
+                            text-align: center;
+                            font-size: 0.9em;
+                            color: @black-9;
+                        }
+                    }
+                }
           }
         }
       
