--- a/MeusTemas/Balancas_Bonetti/static/less/style.less
+++ b/MeusTemas/Balancas_Bonetti/static/less/style.less
@@ -140,6 +140,10 @@ header:extend(.myContainer){
 }
 
 section.slide-show{
+    width: 100%;
+    height: 350px;
+    margin: 0;
+    background-color: @black-5;
 }
 
 .menu-principal{
