--- a/MeusTemas/La_No_Parque/static/less/style.less
+++ b/MeusTemas/La_No_Parque/static/less/style.less
@@ -71,8 +71,7 @@ body{
     }
     @media (min-width:1100px)   {.lateral-margin(80%);}
     @media (min-width:1200px)   {.lateral-margin(75%);}
-    @media (min-width:1350px)   {.lateral-margin(70%);}
-    @media (min-width:1500px)   {.lateral-margin(60%);}
+    @media (min-width:1500px)   {.lateral-margin(65%);}
     
     /* ----- LOGO ----- */
     .logo{
@@ -787,24 +786,23 @@ body{
     /*PRODUTO DETALHE*/
     section.produto_detalhes{
        
-       h1{
-           font-size: 1.25em;
-            text-align: left;
-       }
+       
        
        .produto-content:extend(.full-container){
            margin-bottom: 2%;
            
            .img-container{
-                .float-config(left,59%);
+                .float-config(left,49%);
                 display: table;
                 position: relative;
+                padding: 0 0 20px 0;
 
                .img-content,product-photos{
                    width: 100%;
                    
                    .current-photo{
                        @altura_slide: 400px;
+                       padding: 0 10px 10px 10px;
                        
                        width: 100%;                       
                        height: @altura_slide;
@@ -839,7 +837,7 @@ body{
                .img-thumbs:extend(.full-container){
                    width: 100%;
                    display: table;
-                   margin: 0;
+                   margin: 5px 0 0 0;
                    
                    a{
                        .inline-content(5%);
@@ -852,26 +850,30 @@ body{
            
            .conteudo{
                
-               .float-config(right,40%);
-               padding: 2%;
+               .float-config(right,50%);
+               padding: 5px;
                margin-top: 1%;
                margin-right: 1%;
                margin-bottom: 2%;
                font-size: 1.1em;
                color:@black-10;
-               .border(0,@blue-3);
-               border-width: 2px;  
-               background-color: #fbfbfb;
+               //.border(0,@blue-3);
+               //border-width: 2px;
+               border-radius: 2px;
+               background-color: #efefef;
                
-               .description{
-                    overflow: hidden;
+               h1{
+                   font-size: 1.25em;
+                   text-align: left;
+                   color: @blue-3;
                }
-               
+                             
                p.valor{
                     margin-top: 3%;
                    font-size: 1.25em;
                    margin-bottom: 5%;
                    font-weight: 600;
+                   color: @red-1;       
                }
                
                form{
@@ -950,9 +952,24 @@ body{
                }
                 
            }
-       }
-       
-       .produtos-relacionados:extend(.full-container){
+           
+           .produto-descricao:extend(.full-container){
+               
+               background-color: @white-8;
+               padding:0 5px 5px 5px;
+            
+               h2{
+                   color: @black-3;
+                   font-weight: 600;
+                   font-size: 1.5em;       
+               }
+                   
+               .description{
+                   font-size: 0.95em;
+               }
+           }
+           
+           .produtos-relacionados:extend(.full-container){
             clear: both;
             padding: 1%;
             margin-top: 1%;
@@ -977,7 +994,7 @@ body{
                   
                   .img-content{
                       width: 100%;
-                      height: 140px; 
+                      height: 170px; 
                       text-align: center;
                       
                       img{
@@ -1007,6 +1024,8 @@ body{
         }
            
        }
+       }
+             
    }
     
     /*BUSCA*/
